yerpc/src/snapshots/yerpc__qt__tuple.snap
---
source: yerpc/src/qt.rs
expression: out
---

inline QJsonValue toJson(const uint32_t &o) { return static_cast<double>(o); }
inline bool tryFromJson(const QJsonValue &v, uint32_t &out) {
    if (!v.isDouble()) return false;
    out = static_cast<uint32_t>(v.toDouble());
    return true;
}
inline QJsonValue toJson(const QString &o) { return {o}; }
inline bool tryFromJson(const QJsonValue &v, QString &out) {
    if (!v.isString()) return false;
    out = v.toString();
    return true;
}
using Foo = std::tuple<uint32_t, QString>;
inline QJsonValue toJson(const Foo &o) {
  QJsonArray a;
  a.push_back(toJson(std::get<0>(o)));
  a.push_back(toJson(std::get<1>(o)));
  return a;
}
inline bool tryFromJson(const QJsonValue &v, Foo &out) {
  if (!v.isArray()) return false;
  QJsonArray a = v.toArray();
  if (a.size() != 2) return false;
  if (!tryFromJson(a.at(0), std::get<0>(out))) return false;
  if (!tryFromJson(a.at(1), std::get<1>(out))) return false;
  return true;
}
